[project]
name = "PanDAirflow"
version = "0.1.3"
authors = [
  { name="Daniel Andrus", email="Daniel.Andrus@AlleghenyCounty.us" },
]
description = "Package employed by Allegheny County's Performance and Data Analytics division (PanDA) for Airflow orchestration operations"
readme = "PanDAirflow.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Topic :: Software Development :: Bug Tracking"
]

[project.urls]
Homepage = "https://github.com/Allegheny-CountyStats/PanDA_Airflow"
Issues = "https://github.com/Allegheny-CountyStats/PanDA_Airflow/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/PanDAirflow"]
